; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_request_all.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_hwdec.c_hwdec_devices_request_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_hwdec_devices = type { i32, i32 (i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hwdec_devices_request_all(%struct.mp_hwdec_devices* %0) #0 {
  %2 = alloca %struct.mp_hwdec_devices*, align 8
  store %struct.mp_hwdec_devices* %0, %struct.mp_hwdec_devices** %2, align 8
  %3 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %2, align 8
  %4 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %3, i32 0, i32 1
  %5 = load i32 (i32)*, i32 (i32)** %4, align 8
  %6 = icmp ne i32 (i32)* %5, null
  br i1 %6, label %7, label %19

7:                                                ; preds = %1
  %8 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %2, align 8
  %9 = call i32 @hwdec_devices_get_first(%struct.mp_hwdec_devices* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %7
  %12 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %2, align 8
  %13 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %12, i32 0, i32 1
  %14 = load i32 (i32)*, i32 (i32)** %13, align 8
  %15 = load %struct.mp_hwdec_devices*, %struct.mp_hwdec_devices** %2, align 8
  %16 = getelementptr inbounds %struct.mp_hwdec_devices, %struct.mp_hwdec_devices* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 %14(i32 %17)
  br label %19

19:                                               ; preds = %11, %7, %1
  ret void
}

declare dso_local i32 @hwdec_devices_get_first(%struct.mp_hwdec_devices*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
